--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -52,6 +52,7 @@ post_install do |installer|
         config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '8.0'
       end
     end
-    
+    config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = ["arm64"]
+    config.build_settings["ONLY_ACTIVE_ARCH"] = "YES"
   end
 end
