--- a/android/build.gradle
+++ b/android/build.gradle
@@ -61,9 +61,9 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
 //            signingConfig signingConfigs.debug
-            shrinkResources false
-            useProguard false
-            minifyEnabled false
+//            shrinkResources false
+//            useProguard false
+//            minifyEnabled false
         }
     }
 //
